charts/mediaserver/shelfmark/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shelfmark
  labels:
    app: shelfmark
    app.kubernetes.io/name: shelfmark
spec:
  selector:
    matchLabels:
      app: shelfmark
      app.kubernetes.io/name: shelfmark
  template:
    metadata:
      labels:
        app: shelfmark
        app.kubernetes.io/name: shelfmark
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: shelfmark
          image: ghcr.io/calibrain/shelfmark:1.3.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - name: http
              containerPort: 8084
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: "/downloads"
              subPath: "downloads"
            - name: mediaserver-volume
              mountPath: "/books"
              subPath: "media/books"
            - name: mediaserver-volume
              mountPath: "/config"
              subPath: "config/shelfmark"
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
