charts/mediaserver/shelfmark/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shelfmark
  labels:
    app: shelfmark
spec:
  type: ClusterIP
  ports:
    - port: 8084
      targetPort: 8084
      protocol: TCP
      name: http
  selector:
    app: shelfmark
